--- a/css/styles.css
+++ b/css/styles.css
@@ -95,10 +95,12 @@ ul {
 
 .nav-link:hover {
   color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:focus {
   color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address {
@@ -120,17 +122,20 @@ ul {
 
 /* Hero section */
 
-.hero-section {
-  background-color: #2e2f42;
-  padding: 188px 0;
-  flex-shrink: 0;
-}
-
 .hero-inner {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/bg-image.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 188px 0;
 }
 
 .hero-section-title {
@@ -194,6 +199,20 @@ h2 {
   align-items: flex-start;
   gap: 8px;
   width: calc((100% - 72px) / 4);
+}
+
+.icons-feature-conteiner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  background: #f4f4fd;
+  padding: 24px 100px;
+}
+
+.icons-feature {
 }
 
 .visually-hidden {
@@ -296,6 +315,35 @@ h2 {
   padding: 32px 0;
 }
 
+.social-card {
+  display: flex;
+  gap: 24px;
+}
+
+.social-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+}
+
+.social-icon:hover {
+  background-color: #404bbf;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icon:focus {
+  background-color: #404bbf;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-card-icon {
+  fill: #f4f4fd;
+}
+
 /* Portfolio */
 
 .portfolio-title {
@@ -328,6 +376,39 @@ h2 {
   align-items: flex-start;
   flex-shrink: 0;
   width: calc((100% - 48px) / 3);
+}
+
+.portfolio-image {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-image-overley {
+  position: absolute;
+  padding: 40px 32px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  transform: translatey(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-image:hover .portfolio-image-overley {
+  transform: translatey(0%);
+}
+
+.portfolio-overley-text {
+  width: 296px;
+  color: #f4f4fd;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
 }
 
 .prtf-list-in-box {
@@ -371,6 +452,11 @@ h2 {
   padding: 100px 0;
 }
 
+.footer-container {
+  display: flex;
+  gap: 120px;
+}
+
 .logo-footer {
   color: #4d5ae5;
   font-family: Raleway, sans-serif;
@@ -394,4 +480,14 @@ h2 {
   line-height: 1.5;
   letter-spacing: 0.32px;
   max-width: 264px;
+}
+
+.text-footer-social {
+  color: #fff;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  margin-bottom: 16px;
 }
