--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,8 @@ ul {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .nav-conteiner {
@@ -91,16 +93,30 @@ ul {
   letter-spacing: 0.32px;
   display: inline-block;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-studio {
+  color: #404bbf;
+}
+
+.link-studio::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  width: 48px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 
 .nav-link:hover {
   color: #404bbf;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:focus {
   color: #404bbf;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address {
@@ -110,6 +126,7 @@ ul {
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address:hover {
@@ -122,11 +139,7 @@ ul {
 
 /* Hero section */
 
-.hero-inner {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.hero-section {
   background-color: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -135,6 +148,16 @@ ul {
     url(/images/bg-image.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  max-width: 1440px;
+  background-position: center;
+}
+
+.hero-inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   padding: 188px 0;
 }
 
@@ -174,6 +197,7 @@ h2 {
   display: block;
   margin-top: 48px;
   min-width: 169px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-hero:hover {
@@ -205,14 +229,11 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-grow: 1;
   border-radius: 4px;
   border: 1px solid #8e8f99;
   background: #f4f4fd;
-  padding: 24px 100px;
-}
-
-.icons-feature {
+  width: 264px;
+  height: 112px;
 }
 
 .visually-hidden {
@@ -222,7 +243,6 @@ h2 {
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
@@ -315,29 +335,34 @@ h2 {
   padding: 32px 0;
 }
 
-.social-card {
-  display: flex;
-  gap: 24px;
-}
-
 .social-icon {
   display: flex;
-  align-items: center;
+  gap: 24px;
   justify-content: center;
+}
+
+.social-icon-list {
   width: 40px;
   height: 40px;
+}
+
+.social-icon-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
-}
-
-.social-icon:hover {
-  background-color: #404bbf;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-icon:focus {
+.social-icon-link:hover {
   background-color: #404bbf;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icon-link:focus {
+  background-color: #404bbf;
 }
 
 .social-card-icon {
@@ -376,6 +401,13 @@ h2 {
   align-items: flex-start;
   flex-shrink: 0;
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-inner:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-image {
@@ -395,20 +427,16 @@ h2 {
   background-color: #4d5ae5;
   transform: translatey(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-image:hover .portfolio-image-overley {
-  transform: translatey(0%);
-}
-
-.portfolio-overley-text {
-  width: 296px;
   color: #f4f4fd;
   font-family: Roboto;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.32px;
+}
+
+.portfolio-list-inner:hover .portfolio-image .portfolio-image-overley {
+  transform: translatey(0%);
 }
 
 .prtf-list-in-box {
@@ -454,7 +482,11 @@ h2 {
 
 .footer-container {
   display: flex;
-  gap: 120px;
+  align-items: baseline;
+}
+
+.footer-container-logo {
+  margin-right: 120px;
 }
 
 .logo-footer {
@@ -490,4 +522,9 @@ h2 {
   line-height: 1.5;
   letter-spacing: 0.32px;
   margin-bottom: 16px;
+}
+
+.social-icon-footer {
+  display: flex;
+  gap: 16px;
 }
