--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,7 @@ ul {
 }
 
 .link-studio {
+  position: relative;
   color: #404bbf;
 }
 
@@ -229,6 +230,7 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 8px;
   border-radius: 4px;
   border: 1px solid #8e8f99;
   background: #f4f4fd;
@@ -527,4 +529,23 @@ h2 {
 .social-icon-footer {
   display: flex;
   gap: 16px;
+}
+
+.social-icon-link-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-icon-link-footer:hover {
+  background-color: #31d0aa;
+}
+
+.social-icon-link-footer:focus {
+  background-color: #31d0aa;
 }
